lib_LIBRARIES = crypto

crypto_SOURCES = a_object.c a_bitstr.c a_utctm.c a_gentm.c a_time.c a_int.c
crypto_SOURCES += a_octet.c a_print.c a_type.c a_dup.c a_d2i_fp.c a_i2d_fp.c
crypto_SOURCES += a_utf8.c a_sign.c a_digest.c a_verify.c a_mbstr.c a_strex.c
crypto_SOURCES += x_algor.c x_val.c x_pubkey.c x_sig.c x_req.c x_bignum.c
crypto_SOURCES += x_long.c x_x509.c x_x509a.c x_crl.c x_info.c x_spki.c nsseq.c
crypto_SOURCES += d2i_pu.c d2i_pr.c i2d_pu.c i2d_pr.c t_req.c t_x509.c t_x509a.c
crypto_SOURCES += t_crl.c t_pkey.c t_spki.c t_bitst.c tasn_new.c tasn_fre.c
crypto_SOURCES += tasn_enc.c tasn_dec.c tasn_utl.c tasn_typ.c tasn_prn.c
crypto_SOURCES += tasn_scn.c ameth_lib.c f_int.c f_string.c n_pkey.c x_pkey.c
crypto_SOURCES += bio_asn1.c bio_ndef.c asn_mime.c asn1_gen.c asn1_par.c
crypto_SOURCES += asn1_lib.c asn1_err.c a_strnid.c evp_asn1.c asn_pack.c
crypto_SOURCES += p5_pbe.c p5_pbev2.c p5_scrypt.c p8_pkey.c asn_moid.c
crypto_SOURCES += asn_mstbl.c 
