lib_LIBRARIES = crypto

crypto_SOURCES = set_key.c ecb_enc.c cbc_enc.c ecb3_enc.c cfb64enc.c cfb64ede.c
crypto_SOURCES += cfb_enc.c ofb64ede.c enc_read.c enc_writ.c ofb64enc.c
crypto_SOURCES += ofb_enc.c str2key.c pcbc_enc.c qud_cksm.c rand_key.c des_enc.c
crypto_SOURCES += fcrypt_b.c fcrypt.c xcbc_enc.c rpc_enc.c cbc_cksm.c read2pwd.c
