lib_LIBRARIES = crypto

crypto_SOURCES = eng_err.c eng_lib.c eng_list.c eng_init.c eng_ctrl.c
crypto_SOURCES += eng_table.c eng_pkey.c eng_fat.c eng_all.c tb_rsa.c tb_dsa.c
crypto_SOURCES += tb_ecdsa.c tb_dh.c tb_ecdh.c tb_rand.c tb_store.c tb_cipher.c
crypto_SOURCES += tb_digest.c tb_pkmeth.c tb_asnmth.c eng_openssl.c eng_cnf.c
crypto_SOURCES += eng_dyn.c eng_cryptodev.c eng_rdrand.c
