lib_LIBRARIES = crypto

crypto_SOURCES = encode.c digest.c evp_enc.c evp_key.c evp_acnf.c evp_cnf.c
crypto_SOURCES += e_des.c e_bf.c e_idea.c e_des3.c e_camellia.c e_rc4.c e_aes.c
crypto_SOURCES += names.c e_seed.c e_xcbc_d.c e_rc2.c e_cast.c e_rc5.c m_null.c
crypto_SOURCES += m_md2.c m_md4.c m_md5.c m_sha1.c m_wp.c m_dss1.c m_mdc2.c
crypto_SOURCES += m_ripemd.c m_ecdsa.c p_open.c p_seal.c p_sign.c p_verify.c
crypto_SOURCES += p_lib.c p_enc.c p_dec.c bio_md.c bio_b64.c bio_enc.c evp_err.c
crypto_SOURCES += e_null.c c_all.c c_allc.c c_alld.c evp_lib.c bio_ok.c
crypto_SOURCES += evp_pkey.c evp_pbe.c p5_crpt.c p5_crpt2.c scrypt.c e_old.c
crypto_SOURCES += pmeth_lib.c pmeth_fn.c pmeth_gn.c m_sigver.c
crypto_SOURCES += e_aes_cbc_hmac_sha1.c e_aes_cbc_hmac_sha256.c e_rc4_hmac_md5.c
