lib_LIBRARIES = crypto

crypto_SOURCES = rsa_eay.c rsa_gen.c rsa_lib.c rsa_sign.c rsa_saos.c rsa_err.c
crypto_SOURCES += rsa_pk1.c rsa_ssl.c rsa_none.c rsa_oaep.c rsa_chk.c rsa_null.c
crypto_SOURCES += rsa_pss.c rsa_x931.c rsa_asn1.c rsa_depr.c rsa_ameth.c
crypto_SOURCES += rsa_prn.c rsa_pmeth.c rsa_crpt.c rsa_x931g.c
