lib_LIBRARIES = crypto

crypto_SOURCES = x509_def.c x509_d2.c x509_r2x.c x509_cmp.c x509_obj.c
crypto_SOURCES += x509_req.c x509spki.c x509_vfy.c x509_set.c x509cset.c
crypto_SOURCES += x509rset.c x509_err.c x509name.c x509_v3.c x509_ext.c
crypto_SOURCES += x509_att.c x509type.c x509_lu.c x_all.c x509_txt.c x509_trs.c
crypto_SOURCES += by_file.c by_dir.c x509_vpm.c x_attrib.c x_exten.c x_name.c 
